--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main">
         <div class="cont">
             <div class="header">
-                <h1>ToDo List</h1>
+                <h1>Taskify</h1>
             </div>
             <div class="main-list-cont" id="list-div">
                 <div class="input-cont">
